update tests for actor, genre and oscarsWon filters